paper_experimental_results/2026-05-11T22-01-24/grok-code-fast-1/declarations/type_def_2/sample_001/target.compile.log
error[E0382]: use of moved value: `a`
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/declarations/type_def_2/sample_001/target.rs:41:25
   |
34 |     let mut a = T1 { x: 10 };
   |         ----- move occurs because `a` has type `S1`, which does not implement the `Copy` trait
...
37 |     if takes_t1(a) != 11 {
   |                 - value moved here
...
41 |     if takes_s1(S1 { x: a.x }) != 12 {
   |                         ^^^ value used here after move
   |
note: consider changing this parameter type in function `takes_t1` to borrow instead if owning the value isn't necessary
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/declarations/type_def_2/sample_001/target.rs:12:16
   |
12 | fn takes_t1(v: T1) -> i32 {
   |    --------    ^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `S1` implemented `Clone`, you could clone the value
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/declarations/type_def_2/sample_001/target.rs:1:1
   |
 1 | struct S1 {
   | ^^^^^^^^^ consider implementing `Clone` for this type
...
37 |     if takes_t1(a) != 11 {
   |                 - you could clone this value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.